--- a/app/styles/application.css
+++ b/app/styles/application.css
@@ -17,6 +17,17 @@
   margin-top: 4rem;
 }
 
+.content-wrapper {
+  display: flex;
+  width: 100%;
+}
+
+.main-content {
+  flex: 1;
+  padding: 2rem;
+  overflow-y: auto;
+}
+
 @media screen and (min-width: 30rem) {
   .header,
   .main {
